# cpg-flow-align-genotype

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  lint.yaml  test.yaml
src/align_genotype/: aggregation_stages.py  config_template.toml  dataset_stages.py  dataset_workflow.py  run_workflow.py  stages.py  utils.py  vntyper.toml
src/align_genotype/jobs/: CramQcSamtoolsStats.py  CramQcSomalier.py  CramQcVerifyBamId.py  align.py  build_vntyper_index.py  cram_qc_samtools.py  cram_qc_somalier.py  cram_qc_verify.py  genotype.py  master_qc.py  multiqc.py  picard.py  somalier.py  vntyper.py
src/align_genotype/scripts/: alignment_recovery.py  build_vntyper_index.py  check_multiqc.py  check_pedigree.py  diagnose_cram_manta.py  diagnose_cram_manta.sh  duptest_to_cram.py  fix_primary_alignments.py  index_files.py  master_qc.py  picard_fixmate.py  picard_fixprim.py  record_qc_flags.py  rewrite_crams.py  rewrite_interval_list_sequence_dict.py  run_duptest_variant_calling.py  run_multiple_dup_markers.py  verify_fixmate_manta.py  verify_fixmate_manta.sh
src/align_genotype/templates/: master_qc.html.jinja  vntyper_index.html.jinja  vntyper_index_claude.html.jinja
